--- a/pet-app-jpa/src/main/resources/application.properties
+++ b/pet-app-jpa/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 server.port=8080
 
+spring.devtools.livereload.enabled=true
+
 #For Aroha Deployment
 #spring.datasource.url= jdbc:mysql://arohamysqlrds.cvc8b2isrkrv.us-west-2.rds.amazonaws.com/petdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 #spring.datasource.username= pet
@@ -28,8 +30,8 @@ server.port=8080
 logging.level.com.aroha.pet=INFO
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
 logging.path=logs
-logging.file.max-size=10MB
-logging.file.max-history=4
+logging.file.max-size=80MB
+logging.file.max-history=10
 logging.file=${logging.path}/petApplog.log
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n
 
@@ -61,21 +63,24 @@ spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.enabled=true
 
-
-##### SMTP Mail Properties
-
+#
+###### SMTP Mail Properties
+#
 #spring.mail.host = ${EMAIL_HOST}
 spring.mail.host =smtp.gmail.com
 #spring.mail.username = ${EMAIL_USERNAME}
 #spring.mail.password = ${EMAIL_PASSWORD}
-spring.mail.username = apitestmailsend@gmail.com	
-spring.mail.password = TEST_SERVICE
+spring.mail.username = apiTestmailsend@gmail.com	
+spring.mail.password =TEST_SERVICE
 
 spring.mail.properties.mail.smtp.auth = true
 #spring.mail.properties.mail.smtp.socketFactory.port = ${EMAIL_SMTP_PORT}
 spring.mail.properties.mail.smtp.socketFactory.port =465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback = false
+
+
+
 
 
 
