--- a/pet-app-jpa/src/main/resources/application.properties
+++ b/pet-app-jpa/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.compression.enabled=true
 #spring.datasource.url= jdbc:mysql://localhost:3306/petdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 
 #For Local development
-#spring.datasource.url=jdbc:mariadb://localhost:3307/petdb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.url=jdbc:mariadb://localhost:3307/petdb_live?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 #spring.datasource.username=petuser
 #spring.datasource.password=petuser
 server.port=8080
