--- a/pet-app-jpa/src/main/resources/application.properties
+++ b/pet-app-jpa/src/main/resources/application.properties
@@ -8,9 +8,9 @@ server.compression.enabled=true
 #spring.datasource.url= jdbc:mysql://localhost:3306/petdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 
 #For Local development
-#spring.datasource.url=jdbc:mariadb://localhost:3307/petdb_live?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-#spring.datasource.username=petuser
-#spring.datasource.password=petuser
+#spring.datasource.url=jdbc:mysql://localhost:3306/petdb_live?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=root
 server.port=8080
 
 spring.devtools.livereload.enabled=true
