--- a/pet-app-jpa/src/main/resources/application.properties
+++ b/pet-app-jpa/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.compression.enabled=true
 #spring.datasource.url= jdbc:mysql://localhost:3306/petdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 
 #For Local development
-spring.datasource.url=jdbc:mysql://localhost:3306/petdb_live?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mariadb://localhost:3306/petdb_live?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=root
 server.port=8080
@@ -68,10 +68,10 @@ spring.servlet.multipart.enabled=true
 #
 #spring.mail.host = ${EMAIL_HOST}
 spring.mail.host =smtp.gmail.com
-#spring.mail.username = ${EMAIL_USERNAME}
-#spring.mail.password = ${EMAIL_PASSWORD}
-spring.mail.username = apiTestmailsend@gmail.com	
-spring.mail.password =TEST_SERVICE
+spring.mail.username = ${EMAIL_USERNAME}
+spring.mail.password = ${EMAIL_PASSWORD}
+#spring.mail.username = apiTestmailsend@gmail.com	
+#spring.mail.password =TEST_SERVICE
 
 spring.mail.properties.mail.smtp.auth = true
 #spring.mail.properties.mail.smtp.socketFactory.port = ${EMAIL_SMTP_PORT}
