--- a/pet-app-jpa/src/main/resources/application.properties
+++ b/pet-app-jpa/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.compression.enabled=true
 #spring.datasource.url= jdbc:mysql://localhost:3306/petdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 
 #For Local development
-spring.datasource.url=jdbc:mariadb://localhost:3306/petdb_live?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/petdb_live?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=root
 server.port=8080
@@ -74,8 +74,8 @@ spring.mail.username = apiTestmailsend@gmail.com
 spring.mail.password =TEST_SERVICE
 
 spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.socketFactory.port = ${EMAIL_SMTP_PORT}
-#spring.mail.properties.mail.smtp.socketFactory.port =465
+#spring.mail.properties.mail.smtp.socketFactory.port = ${EMAIL_SMTP_PORT}
+spring.mail.properties.mail.smtp.socketFactory.port =465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback = false
 
