--- a/pet-app-jpa/src/main/resources/application.properties
+++ b/pet-app-jpa/src/main/resources/application.properties
@@ -8,9 +8,9 @@ server.compression.enabled=true
 #spring.datasource.url= jdbc:mysql://localhost:3306/petdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 
 #For Local development
-spring.datasource.url=jdbc:mariadb://localhost:3306/petdb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mariadb://localhost:3306/petdb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Kolkata&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=root
 server.port=8080
 
 spring.devtools.livereload.enabled=true
@@ -21,13 +21,13 @@ spring.devtools.livereload.enabled=true
 #spring.datasource.password= ArohPet!2019
 
 #For Aroha Deployment using environmental
-#spring.datasource.url= ${MYSQL_DB_URL}
-#spring.datasource.username= ${MYSQL_DB_USERNAME}
-#spring.datasource.password= ${MYSQL_DB_PASSWORD}
+spring.datasource.url= ${MYSQL_DB_URL}
+spring.datasource.username= ${MYSQL_DB_USERNAME}
+spring.datasource.password= ${MYSQL_DB_PASSWORD}
 #server.port=${SERVER_PORT}
 
 
-logging.level.com.aroha.pet=INFO
+logging.level.com.aroha.pet=OFF
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
 logging.path=logs
 logging.file.max-size=80MB
@@ -50,12 +50,12 @@ spring.datasource.initialization-mode=always
 
 ## Jackson Properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
-spring.jackson.time-zone= UTC
+spring.jackson.time-zone= Asia/Kolkata
 
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
-app.jwtExpirationInMs = 604800000
-#app.jwtExpirationInMs = 60000
+#app.jwtExpirationInMs = 604800000
+app.jwtExpirationInMs = 10800000
 
 ## Spring Profiles
 # spring.profiles.active=prod
@@ -67,12 +67,12 @@ spring.servlet.multipart.enabled=true
 #
 ###### SMTP Mail Properties
 #
-#spring.mail.host = ${EMAIL_HOST}
-spring.mail.host =smtp.gmail.com
-#spring.mail.username = ${EMAIL_USERNAME}
-#spring.mail.password = ${EMAIL_PASSWORD}
-spring.mail.username = apiTestmailsend@gmail.com	
-spring.mail.password =TEST_SERVICE
+spring.mail.host = ${EMAIL_HOST}
+#spring.mail.host =smtp.gmail.com
+spring.mail.username = ${EMAIL_USERNAME}
+spring.mail.password = ${EMAIL_PASSWORD}
+#spring.mail.username = apiTestmailsend@gmail.com	
+#spring.mail.password =TEST_SERVICE
 
 spring.mail.properties.mail.smtp.auth = true
 #spring.mail.properties.mail.smtp.socketFactory.port = ${EMAIL_SMTP_PORT}
