--- a/pet-app-jpa/src/main/resources/application.properties
+++ b/pet-app-jpa/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.compression.enabled=true
 #spring.datasource.url= jdbc:mysql://localhost:3306/petdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 
 #For Local development
-spring.datasource.url=jdbc:mysql://localhost:3306/petdb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Kolkata&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mariadb://localhost:3306/petdb_live?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Kolkata&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=root
 server.port=8080
@@ -56,6 +56,8 @@ spring.jackson.time-zone= Asia/Kolkata
 app.jwtSecret= JWTSuperSecretKey
 #app.jwtExpirationInMs = 604800000
 app.jwtExpirationInMs = 10800000
+#app.jwtExpirationInMs =180000
+
 
 ## Spring Profiles
 # spring.profiles.active=prod
